[project]
name = "personalized-awb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.6",
    "matplotlib (>=3.11.0,<4.0.0)",
    "torch==2.9.1+rocm7.13.0a20260315",
    "torchaudio==2.9.0+rocm7.13.0a20260315",
    "torchvision==0.24.0+rocm7.13.0a20260315",
    "triton==3.5.1+rocm7.13.0a20260315",
    "opencv-python>=5.0.0.93",
]


[tool.uv]
package = false

[tool.uv.sources]
torch = [
	{ index = "the_rock_nightly"},
]
torchvision = [
	{ index = "the_rock_nightly" },
]
torchaudio = [
	{ index = "the_rock_nightly" },
]
triton = [
	{ index = "the_rock_nightly" },
]

[[tool.uv.index]]
name = "the_rock_nightly"
url = "https://rocm.nightlies.amd.com/v2/gfx120X-all/"
explicit = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"

# Override "torch" metadata removing rocm[libraries (we install them separately)]
[[tool.uv.dependency-metadata]]
name = "torch"
version = "2.9.1+rocm7.13.0a20260315"
requires-dist = [
	"filelock",
	"typing-extensions>=4.10.0",
	"setuptools; python_version >= '3.12'",
	"sympy>=1.13.3",
	"networkx>=2.5.1",
	"jinja2",
	"fsspec>=0.8.5",
	"triton==3.5.1+rocm7.13.0a20260315"
]
